# crudapplication

./: README.md  requirements  setup.cfg  testtry.py
src/: App.py  app_flask.py  call_csv.py  cry.json  test_app.py
src/crudwithflask_Priyanka.egg-info/: PKG-INFO  SOURCES.txt
src/data/: cry.csv
src/templates/: header.html  index.html  insert.html  startindex.html  success.html  update.html
src/templates/errors/: 404.html
tests/: test_app.py
