[metadata]
name = crudwithflask-Priyanka
version = 0.0.1
author = Priyanka Sirohiya
author_email = priyanka.sirohiya@gmail.com
description = A small application to perform CRUD operations with flask
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/priyankacode-123/crudapplication.git
project_urls =
    Bug Tracker = https://github.com/priyankacode-123/crudapplication.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src